--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
     </style>
     <style name="Widget.ActionBar" parent="Widget.AppCompat.ActionBar">
         <item name="background">@color/app_green_color</item>
+        <item name="android:color">@color/actionbar_text</item>
     </style>
 
     <style name="GoButtonStyle">
