--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,8 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_margin">15dp</item>
     </style>
+
+    <style name="playlist_name_custom_editText" parent="android:Widget.EditText">
+        <item name="android:background">@drawable/setlistertheme_edit_text_holo_light</item>
+    </style>
 </resources>
