--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,8 +3,9 @@
     <color name="app_green_color">#97d973</color>
     <color name="app_darker_green_color">#ff5dd954</color>
     <color name="app_green_color_pressed">#ff1b9e29</color>
-    <color name="actionbar_text">#000000</color>
     <color name="hint_text_color">#888888</color>
+    <color name="action_bar_clicked">#777777</color>
+    <color name="actionbar_text">#000000</color>
     <color name="editText_color">#000000</color>
     <color name="setlistertheme_color">#000000</color>
 </resources>
