--- a/app/src/main/res/layout/actionbar_playlist_name_layout.xml
+++ b/app/src/main/res/layout/actionbar_playlist_name_layout.xml
@@ -13,7 +13,8 @@
         android:hint="@string/playlist_name_hint"
         android:padding="8dp"
         android:id="@+id/playlist_name"
-        android:layout_weight="5"/>
+        android:layout_weight="5"
+        android:inputType="text"/>
     <TextView
         android:id="@+id/create_playlist"
         android:textColor="@color/textview_clicked_color"
@@ -21,6 +22,7 @@
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:gravity="center"
+        android:focusable="true"
         android:text="@string/create_playlist"/>
 
 </LinearLayout>
