--- a/app/src/main/res/layout/playlist_item_layout.xml
+++ b/app/src/main/res/layout/playlist_item_layout.xml
@@ -7,10 +7,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_alignParentRight="true"
         android:enabled="true"
         android:padding="4dp"
-        android:focusable="false"/>
+        android:layout_marginTop="5dp"
+        android:focusable="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/song_list_nameTextView"
